# strimzi-kafka-connect-utils

./: .gitignore  .lintrc.toml  .pre-commit-config.yaml  DESIGN_SPEC.md  Makefile  README.md  README.md.bak  app.py  docker-compose.yaml  pyproject.toml  requirements.txt  secrets.toml.example  setup-garage.sh  setup.sh
.claude/: settings.local.json
.github/workflows/: lint-connectors.yml.example
config/: garage.toml
examples/: README.md  debezium-postgres-connector.json  debezium-postgres-connector.yaml  iceberg-sink-connector.json  iceberg-sink-connector.yaml  legacy-connector-with-exemptions.yaml
k8s/: 01-postgres.yaml  02-kafka.yaml  03-kafka-connect.yaml  04-garage-setup.yaml  04-garage.yaml  05-iceberg-catalog.yaml  README.md  deploy.sh  destroy.sh  status.sh
strimzi_ops/: __init__.py  cli.py  config.py  control.py  linter.py  monitor.py  validator.py
