[project]
name = "strimzi-ops"
version = "0.1.0"
description = "A unified platform to validate, monitor, and control Kafka Connect deployments"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Strimzi Ops Team" }]
keywords = [
  "kafka",
  "kafka-connect",
  "strimzi",
  "debezium",
  "data-engineering",
  "streamlit",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.14",
]

dependencies = [
  "streamlit>=1.40.0",
  "pydantic>=2.10.0",
  "tomli>=2.2.0",
  "confluent-kafka>=2.7.0",
  "requests>=2.32.0",
  "python-json-logger>=2.0.7",
  "ruamel.yaml>=0.18.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "black>=24.0.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  "pytest-cov>=6.0.0",
]

[project.scripts]
strimzi-ops = "app:main"
strimzi-lint = "strimzi_ops.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "black>=24.0.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  "pytest-cov>=6.0.0",
  "pre-commit>=4.0.0",
  "types-requests>=2.31.0",
  "types-PyYAML>=6.0.0",
]

[tool.black]
line-length = 100
target-version = ['py314']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
ignore = [
  "E501", # line too long (handled by black)
  "B008", # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]
